more results and figures 😬

--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -333,3 +333,10 @@
   title = {{Metapopulation ecology}},
   year = {1999},
 }
+
+@Article{burns1990silvics,
+  title = {Silvics of North America: 1. Conifers; 2. Hardwoods Agriculture Handbook 654},
+  author = {Russell M Burns and Barbara H Honkala and {others}},
+  journal = {US Department of Agriculture, Forest Service, Washington, DC},
+  year = {1990},
+}
