:bug: fix hyperlink for supp material

--- a/manuscript/conf/templateTitle.tex
+++ b/manuscript/conf/templateTitle.tex
@@ -65,7 +65,7 @@ $if(running_title)$
 \small{{\bf Running title}: $running_title$}\\\\
 $endif$
 $if(supporting-files)$
-\small{{\bf Supporting information}: Additional supporting information can be found $for(supporting-files)$\href{https://willvieira.github.io/ms_STM-managed/$supporting-files$.pdf}{here}$sep$, $endfor$.}\\\\
+\small{{\bf Supporting information}: Additional supporting information can be found $for(supporting-files)$\href{https://$github-user$.github.io/$github-user$/$supporting-files$.pdf}{here}$sep$, $endfor$.}\\\\
 $endif$
 $if(acknowledgments)$
 \small{{\bf Acknowledgments}: $acknowledgments$}\\\\
