small edits discussion

--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -801,3 +801,20 @@ The authors have declared no competing interest.},
   volume = {12},
   year = {2014},
 }
+
+@Article{Evans2016,
+  abstract = {Understanding and forecasting species??? geographic distributions in the face of global change is a central priority in biodiversity science. The existing view is that one must choose between correlative models for many species versus process-based models for few species. We suggest that opportunities exist to produce process-based range models for many species, by using hierarchical and inverse modeling to borrow strength across species, fill data gaps, fuse diverse data sets, and model across biological and spatial scales. We review the statistical ecology and population and range modeling literature, illustrating these modeling strategies in action. A variety of large, coordinated ecological datasets that can feed into these modeling solutions already exist, and we highlight organisms that seem ripe for the challenge.},
+  author = {Margaret E K Evans and Cory Merow and Sydne Record and Sean M. McMahon and Brian J. Enquist},
+  doi = {10.1016/j.tree.2016.08.005},
+  file = {:Users/wvieira/Documents/Mendeley Desktop/Evans et al. - 2016 - Towards Process-based Range Modeling of Many Species(2).pdf:pdf},
+  issn = {01695347},
+  journal = {Trends in Ecology and Evolution},
+  keywords = {data fusion,ecological forecasting,hierarchical model,inverse modeling,species distribution models},
+  number = {11},
+  pages = {860--871},
+  publisher = {Elsevier Ltd},
+  title = {{Towards Process-based Range Modeling of Many Species}},
+  url = {http://dx.doi.org/10.1016/j.tree.2016.08.005},
+  volume = {31},
+  year = {2016},
+}
