edits after Dom

--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -628,33 +628,6 @@
   year = {2020},
 }
 
-@Article{Leite2023,
-  abstract = {Aim Global forests and their structural and functional features are shaped by many mechanisms that impact tree vital rates. Although many studies have tried to quantify how specific mechanisms influence vital rates, their relative importance among forests remains unclear. We aimed to assess the patterns of variation in vital rates among species and in space and time across forests to understand and provide a baseline for expectations of the relative importance of the different mechanisms in different contexts.
-
-Location 21 forest plots worldwide.
-
-Time period 1981-2021
-
-Major taxa studied Woody plants
-
-Methods We developed a conceptual and statistical framework (variance partitioning of multilevel models) that attributes the variability in growth, mortality, and recruitment to variation in species, space, and time, and their interactions, which we refer to as organising principles (OPs). We applied it to data from 21 forest plots covering more than 2.9 million trees of approximately 6,500 species.
-
-Results Differences among species, the species OP, were a major source of variability in tree vital rates, explaining 28-33{\%} of demographic variance alone, and in interaction with space 14-17{\%}, totalling 40-43{\%}. Models with small spatial grain sizes (quadrats at 5 × 5 m) retained most of the spatial OP, but a large proportion of variance remained unexplained (31-55{\%}). The average variability among species declined with species richness across forests, indicating that diverse forests featured smaller interspecific differences in vital rates.
-
-Main conclusions Decomposing variance in vital rates into the proposed OPs showed that taxonomy is crucial to predictions and understanding of tree demography. Our framework has a high potential for identifying the structuring mechanisms of global forest dynamics as it highlights the most promising avenues for future research both in terms of understanding the relative contributions of mechanisms to forest demography and diversity and for improving projections of forest ecosystems.
-
-{\#}{\#}{\#} Competing Interest Statement
-
-The authors have declared no competing interest.},
-  author = {Melina {de Souza Leite} and Sean M. McMahon and Paulo In{\a'a}cio Prado and Stuart J. Davies and Alexandre Adalardo {de Oliveira} and Hannes P. De Deurwaerder and Salom{\a'o}n Aguilar and Kristina J. Anderson-Teixeira and Nurfarah Aqilah and Norman A. Bourg and Warren Y. Brockelman and Nicolas Casta{\~n}o and Chia-Hao Chang-Yang and Yu-Yun Chen and George Chuyong and Keith Clay and {\a'A}lvaro Duque and Sisira Ediriweera and Corneille E.N. Ewango and Gregory Gilbert and I.A.U.N. Gunatilleke and C.V.S. Gunatilleke and Robert Howe and Walter Huaraca Huasco and Akira Itoh and Daniel J. Johnson and David Kenfack and Kamil Kr{\a'a}l and Yao Tze Leong and James A. Lutz and Jean-Remy Makana and Yadvinder Malhi and William J. McShea and Mohizah Mohamad and Musalmah Nasardin and Anuttara Nathalang and Geoffrey Parker and Renan Parmigiani and Rolando P{\a'e}rez and Richard P. Phillips and Pavel {\v S}amonil and I-Fang Sun and Sylvester Tan and Duncan Thomas and Jill Thompson and Mar\'ia Uriarte and Amy Wolf and Jess Zimmerman and Daniel Zuleta and Marco D. Visser and Lisa H{\"u}lsmann},
-  file = {:Users/wvieira/Documents/Mendeley Desktop/2023.01.11.523538v2.full.pdf:pdf},
-  journal = {bioRxiv},
-  pages = {2023.01.11.523538},
-  title = {{Major axes of variation in tree demography across global forests}},
-  url = {https://www.biorxiv.org/content/10.1101/2023.01.11.523538v1{\%}0Ahttps://www.researchgate.net/publication/367121238{\_}Major{\_}axes{\_}of{\_}variation{\_}in{\_}tree{\_}demography{\_}across{\_}global{\_}forests},
-  year = {2023},
-}
-
 @Article{Zhang2015,
   abstract = {Tree mortality, growth, and recruitment are essential components of forest dynamics and resiliency, for which there is great concern as climate change progresses at high latitudes. Tree mortality has been observed to increase over the past decades in many regions, but the causes of this increase are not well understood, and we know even less about long-term changes in growth and recruitment rates. Using a dataset of long-term (1958-2009) observations on 1,680 permanent sample plots from undisturbed natural forests in western Canada, we found that tree demographic rates have changed markedly over the last five decades. We observed a widespread, significant increase in tree mortality, a significant decrease in tree growth, and a similar but weaker trend of decreasing recruitment. However, these changes varied widely across tree size, forest age, ecozones, and species. We found that competition was the primary factor causing the long-term changes in tree mortality, growth, and recruitment. Regional climate had a weaker yet still significant effect on tree mortality, but little effect on tree growth and recruitment. This finding suggests that internal community-level processes-more so than external climatic factors-are driving forest dynamics.},
   author = {Jian Zhang and Shongming Huang and Fangliang He},
@@ -817,4 +790,91 @@ The authors have declared no competing interest.},
   url = {http://dx.doi.org/10.1016/j.tree.2016.08.005},
   volume = {31},
   year = {2016},
+}
+
+@Article{Leite2023,
+  author = {Melina {de Souza Leite} and Sean M. McMahon and Paulo In{\a'a}cio Prado and Stuart J. Davies and Alexandre Adalardo {de Oliveira} and Hannes P. De Deurwaerder and Salom{\a'o}n Aguilar and Kristina J. Anderson-Teixeira and Nurfarah Aqilah and Norman A. Bourg and Warren Y. Brockelman and Nicolas Casta{\~n}o and Chia-Hao Chang-Yang and Yu-Yun Chen and George Chuyong and Keith Clay and {\a'A}lvaro Duque and Sisira Ediriweera and Corneille E.N. Ewango and Gregory Gilbert and I.A.U.N. Gunatilleke and C.V.S. Gunatilleke and Robert Howe and Walter Huaraca Huasco and Akira Itoh and Daniel J. Johnson and David Kenfack and Kamil Kr{\a'a}l and Yao Tze Leong and James A. Lutz and Jean-Remy Makana and Yadvinder Malhi and William J. McShea and Mohizah Mohamad and Musalmah Nasardin and Anuttara Nathalang and Geoffrey Parker and Renan Parmigiani and Rolando P{\a'e}rez and Richard P. Phillips and Pavel {\v S}amonil and I-Fang Sun and Sylvester Tan and Duncan Thomas and Jill Thompson and Mar\'ia Uriarte and Amy Wolf and Jess Zimmerman and Daniel Zuleta and Marco D. Visser and Lisa H{\"u}lsmann},
+  file = {:Users/wvieira/Documents/Mendeley Desktop/2023.01.11.523538v2.full.pdf:pdf},
+  journal = {bioRxiv},
+  title = {{Major axes of variation in tree demography across global forests}},
+  url = {https://www.biorxiv.org/content/10.1101/2023.01.11.523538v2.abstract},
+  year = {2023},
+}
+
+@Article{Damgaard2020,
+  abstract = {In many applied cases of ecological and environmental modeling there is sizeable variation in the independent variables as a result of measurement and sampling errors. This uncertainty may lead to biased predictions. It is possible to avoid this problem by increased sampling and by modeling the errors using hierarchical modeling.},
+  author = {Christian Damgaard},
+  doi = {10.1016/j.tree.2020.07.003},
+  file = {:Users/wvieira/Documents/Mendeley Desktop/1-s2.0-S016953472030183X-main.pdf:pdf},
+  issn = {01695347},
+  journal = {Trends in Ecology and Evolution},
+  keywords = {biased prediction intervals,ecological and environmental modeling,hierarchical modeling,regression dilution},
+  number = {10},
+  pages = {871--873},
+  pmid = {32727661},
+  publisher = {Elsevier Ltd},
+  title = {{Measurement Uncertainty in Ecological and Environmental Models}},
+  url = {https://doi.org/10.1016/j.tree.2020.07.003},
+  volume = {35},
+  year = {2020},
+}
+
+@Article{Cressie2009,
+  abstract = {Analyses of ecological data should account for the uncertainty in the process(es) that generated the data. However, accounting for these uncertainties is a difficult task, since ecology is known for its complexity. Measurement and/or process errors are often the only sources of uncertainty modeled when addressing complex ecological problems, yet analyses should also account for uncertainty in sampling design, in model specification, in parameters governing the specified model, and in initial and boundary conditions. Only then can we be confident in the scientific inferences and forecasts made from an analysis. Probability and statistics provide a framework that accounts for multiple sources of uncertainty. Given the complexities of ecological studies, the hierarchical statistical model is an invaluable tool. This approach is not new in ecology, and there are many examples (both Bayesian and non-Bayesian) in the literature illustrating the benefits of this approach. In this article, we provide a baseline for concepts, notation, and methods, from which discussion on hierarchical statistical modeling in ecology can proceed. We have also planted some seeds for discussion and tried to show where the practical difficulties lie. Our thesis is that hierarchical statistical modeling is a powerful way of approaching ecological analysis in the presence of inevitable but quantifiable uncertainties, even if practical issues sometimes require pragmatic compromises. {\textcopyright} 2009 by the Ecological Society of America.},
+  author = {Noel Cressie and Catherine A. Calder and James S. Clark and Jay M. {Ver Hoef} and Christopher K. Wikle},
+  doi = {10.1890/07-0744.1},
+  file = {:Users/wvieira/Documents/Mendeley Desktop/Ecological Applications - 2009 - Cressie - Accounting for uncertainty in ecological analysis the strengths and limitations.pdf:pdf},
+  issn = {10510761},
+  journal = {Ecological Applications},
+  keywords = {Bayesian modeling,Data model,Design,Empirical Bayes,Harbor seals,MCMC,Prior,Process model,Spatial process,Spatiotemporal process},
+  number = {3},
+  pages = {553--570},
+  pmid = {19425416},
+  title = {{Accounting for uncertainty in ecological analysis: The strengths and limitations of hierarchical statistical modeling}},
+  volume = {19},
+  year = {2009},
+}
+
+@Article{Harwood2003,
+  abstract = {All ecologists are familiar with uncertainty, at least at the level of whether they should reject a null hypothesis. Uncertainty is, however, pervasive and its characterization is essential if we are to understand our effects on ecosystems. Traditional fisheries management has a poor track record for confronting uncertainty, but most management authorities are now committed to a precautionary approach. As a result, some of the most interesting methods for taking account of uncertainty in ecological systems have been developed by fisheries scientists. These methods evaluate the relative performance of different management procedures with the use of mathematical and statistical models that synthesize knowledge and speculation about the system of interest. Recent advances in computer-intensive statistics have made it possible to combine this approach with model fitting, so that the uncertainties and risks associated with different outcomes of management can be quantified. We show how this methodology can be applied to a range of ecological problems where the advice that scientists provide to decision makers is likely to be clouded by uncertainty.},
+  author = {John Harwood and Kevin Stokes},
+  doi = {10.1016/j.tree.2003.08.001},
+  file = {:Users/wvieira/Documents/Mendeley Desktop/1-s2.0-S0169534703002489-main.pdf:pdf},
+  issn = {01695347},
+  journal = {Trends in Ecology and Evolution},
+  number = {12},
+  pages = {617--622},
+  title = {{Coping with uncertainty in ecological advice: Lessons from fisheries}},
+  volume = {18},
+  year = {2003},
+}
+
+@Article{Clark2010,
+  abstract = {In the past, explanations for high species diversity have been sought at the species level. Theory shows that coexistence requires substantial differences between species, but species-level data rarely provide evidence for such differences. Using data from forests in the southeastern United States, I show here that variation evident at the individual level provides for coexistence of large numbers of competitors. Variation among individuals within populations allows species to differ in their distributions of responses to the environment, despite the fact that the populations to which they belong do not differ, on average. Results are consistent with theory predicting that coexistence depends on competition being stronger within than between species, shown here by analysis of individual-level responses to environmental fluctuation.},
+  author = {James S Clark},
+  doi = {10.1126/science.1183506},
+  file = {:Users/wvieira/Documents/Mendeley Desktop/science.1183506.pdf:pdf},
+  issn = {00368075},
+  journal = {Science},
+  number = {5969},
+  pages = {1129--1132},
+  pmid = {20185724},
+  title = {{Individuals and the variation needed for high species diversity in forest trees}},
+  volume = {327},
+  year = {2010},
+}
+
+@Article{Shoemaker2020,
+  author = {Lauren G. Shoemaker and Lauren L. Sullivan and Ian Donohue and Juliano S. Cabral and Ryan J. Williams and Margaret M. Mayfield and Jonathan M. Chase and Chengjin Chu and W. Stanley Harpole and Andreas Huth and Janneke HilleRisLambers and Aubrie R. M. James and Nathan J. B. Kraft and Felix May and Ranjan Muthukrishnan and Sean Satterlee and Franziska Taubert and Xugao Wang and Thorsten Wiegand and Qiang Yang and Karen C. Abbott},
+  doi = {10.1002/ecy.2922},
+  file = {:Users/wvieira/Documents/Mendeley Desktop/Ecology - 2019 - Shoemaker - Integrating the underlying structure of stochasticity into community ecology.pdf:pdf},
+  issn = {0012-9658},
+  journal = {Ecology},
+  month = {feb},
+  number = {2},
+  pages = {1--15},
+  title = {{Integrating the underlying structure of stochasticity into community ecology}},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/ecy.2922},
+  volume = {101},
+  year = {2020},
 }
