--- a/manuscript/conf/templateThesis.tex
+++ b/manuscript/conf/templateThesis.tex
@@ -19,6 +19,9 @@ $for(authors)$$authors.givennames$~$authors.familyname$$sep$, $endfor$
 
 $body$
 
+
+\newpage
+
 \singlespacing
 {\renewcommand{\bibname}{References}
 \renewcommand{\bibsection}{\section{\bibname}}
