--- a/manuscript/conf/templateThesis.tex
+++ b/manuscript/conf/templateThesis.tex
@@ -17,8 +17,9 @@ $endif$
 $for(authors)$$authors.givennames$~$authors.familyname$$sep$, $endfor$
 \end{center}
 
-$body$
+\section{Abstract}
 
+$body$
 
 \newpage
 
