edits for depot

--- a/manuscript/conf/templateThesis.tex
+++ b/manuscript/conf/templateThesis.tex
@@ -1,6 +1,6 @@
 \graphicspath{{chapter$chapter-number$/}{manuscript/}}
 
-\chapter{\textbf{ $chapter-title$}}
+\chapter{\textbf{\MakeUppercase{  $chapter-title$}}}
 
 \section{Résumé de l'article et contribution}
 
@@ -10,7 +10,7 @@ $resume-contribution$
 \pagebreak
 
 \begin{center}
-\textbf{$title$} \\
+\textbf{\MakeUppercase{$title$}} \\
 $if(published)$
 \textit{$journal$} ($year$), $volume-isue-pages$. \\
 $endif$
@@ -18,6 +18,10 @@ $for(authors)$$authors.givennames$~$authors.familyname$$sep$, $endfor$
 \end{center}
 
 \section{Abstract}
+
+$abstract$
+
+\textbf{Keywords}: $for(keywords)$$keywords$$sep$, $endfor$
 
 $body$
 
